# test_cicd

./: .gitignore  AUTOMATED_TESTING.md  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: cd_prod.yml  cd_test.yml  ci.yml  debug-workflow-run.yml
scripts/: run_automated_tests.py
test_data/: input_data.json  reference_data.json
tests/: test_app.py
