[tool.poetry]
name = "test_cicd"
version = "0.1.0"
description = "A test project for CI/CD pipeline"
authors = ["Your Name <nghhoang17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 